// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders component when checked 1`] = `
<DocumentFragment>
  <span
    aria-checked="true"
    class="switch switch--checked a-class-name"
    id="id"
    role="checkbox"
    tabindex="0"
  >
    <span
      class="switch--thumb"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22ZM7.70712 11.2929L6.29291 12.7072L10.5 16.9143L18.2071 9.20715L16.7929 7.79293L10.5 14.0858L7.70712 11.2929Z"
          fill="#fff"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <input
      checked=""
      readonly=""
      type="checkbox"
    />
  </span>
</DocumentFragment>
`;

exports[`Switch renders component when unchecked 1`] = `
<DocumentFragment>
  <span
    aria-checked="false"
    class="switch switch--unchecked a-class-name"
    id="id"
    role="checkbox"
    tabindex="0"
  >
    <span
      class="switch--thumb"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22ZM15.2929 16.7071L12 13.4142L8.70715 16.7071L7.29294 15.2929L10.5858 12L7.29291 8.70712L8.70712 7.29291L12 10.5858L15.2929 7.29291L16.7072 8.70712L13.4142 12L16.7071 15.2929L15.2929 16.7071Z"
          fill="#fff"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <input
      readonly=""
      type="checkbox"
    />
  </span>
</DocumentFragment>
`;
